pgpvis-core/tests/snapshots/pgpvis_core__render__tests__any_packet_unknown.snap
---
source: pgpvis-core/src/render.rs
assertion_line: 489
expression: node
---
span:
  offset: 0
  length: 1
  inner: ~
text: Unknown
children: []
