pgpvis-core/tests/snapshots/pgpvis_core__render__tests__eddsa_legacy.snap
---
source: pgpvis-core/src/render.rs
expression: node
---
children:
  - span:
      offset: 4
      length: 5
      inner: ~
    text: Curve OID
    children:
      - span: ~
        text: "Name: Ed25519Legacy"
        children: []
      - span:
          offset: 0
          length: 1
          inner: ~
        text: "Length: 1"
        children: []
      - span:
          offset: 2
          length: 3
          inner: ~
        text: "OID: [2 octets]"
        children: []
  - span:
      offset: 10
      length: 11
      inner: ~
    text: Q (MPI)
    children:
      - span:
          offset: 6
          length: 7
          inner: ~
        text: "Length: 1"
        children: []
      - span:
          offset: 8
          length: 9
          inner: ~
        text: "Integers: [2 octets]"
        children: []
