pgpvis-core/tests/snapshots/pgpvis_core__render__tests__header_openpgp.snap
---
source: pgpvis-core/src/render.rs
expression: node
---
span:
  offset: 4
  length: 5
  inner: ~
text: Header
children:
  - span:
      offset: 0
      length: 1
      inner: ~
    text: CTB
    children:
      - span: ~
        text: "Format: OpenPGP"
        children: []
      - span: ~
        text: "Type ID: 13"
        children: []
  - span:
      offset: 2
      length: 3
      inner: ~
    text: "Length: 123 (Full)"
    children: []
