pgpvis-core/tests/snapshots/pgpvis_core__render__tests__kdf_parameters.snap
---
source: pgpvis-core/src/render.rs
expression: node
---
span:
  offset: 8
  length: 9
  inner: ~
text: KDF Parameters
children:
  - span:
      offset: 0
      length: 1
      inner: ~
    text: "Length: 3"
    children: []
  - span:
      offset: 2
      length: 3
      inner: ~
    text: "Reserved: 1"
    children: []
  - span:
      offset: 4
      length: 5
      inner: ~
    text: "Hash Algorithm: SHA2-512 (10)"
    children: []
  - span:
      offset: 6
      length: 7
      inner: ~
    text: "Symmetric Key Algorithm: Camellia with 256-bit key (13)"
    children: []
