pgpvis-core/tests/snapshots/pgpvis_core__render__tests__legacy_length_full.snap
---
source: pgpvis-core/src/render.rs
expression: node
---
span:
  offset: 0
  length: 1
  inner: ~
text: "Length: 123 (Full)"
children: []
